<resources>
    <string name="appName">Guess number!</string>
    <string name="playButton">Play</string>
    <string name="settingsButton">Settings</string>
    <string name="aboutButton">About</string>
    <string name="ageTextBoxLabel">Age</string>
    <string name="nicknameTextBoxLabel">Nickname</string>
    <string name="soundCheckBoxLabel">Sound</string>
    <string name="saveButtonLabel">Save</string>
    <string name="settingsBarTitle">Settings</string>
    <string name="nicknameLabel">Nickname</string>
    <string name="ageLabel">Age</string>
    <string name="gameRulesTextView">Pick a number between {min} and {max}</string>
    <string name="turnTextView">Turn {count}</string>
    <string name="guessTextView">Your guess is {value}, too {result}</string>
    <string name="guessButton">Guess!</string>
    <string name="lowText">Low</string>
    <string name="highText">High</string>
    <string name="onSuccessSettingsSave">"Settings saved successfully!"</string>
    <integer name="defaultAge">16</integer>
    <bool name="defaultSoundEnabled">true</bool>
    <integer name="usernameMinLength">3</integer>
    <integer name="usernameMaxLength">32</integer>
    <string name="nicknameHint">Enter your nickname</string>
    <string name="ageHint">Enter your age</string>
    <string name="tooShortUsernameMsg">Username must have at least 3 symbols</string>
    <string name="tooLongUsernameMsg">Username must have less than 32 symbols</string>
    <string name="incorrectFormatAgeMsg">Incorrect format age</string>
    <integer name="ageMax">99</integer>
    <integer name="ageMin">1</integer>
    <string name="tooLowAgeMsg">Age must be higher than 1</string>
    <string name="tooHighAgeMsg">Age must be lower than 99</string>
    <string name="pointsLabel">Your points</string>
    <string name="newUserGreeting">Welcome</string>
    <string name="knownUserGreeting">Welcome back</string>
    <string name="unknownUser">Anonymous</string>
    <string name="userPointsLabel">You have ${points} points</string>
    <string name="lastResultsTextView">Your last results</string>
</resources>
