<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/playButton"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="116dp"
        android:background="#f8bd7f"
        android:fontFamily="@font/montserrat"
        android:onClick="openPlay"
        android:text="@string/playButton"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/settingsButton"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="116dp"
        android:background="#b3e1e1"
        android:fontFamily="@font/montserrat"
        android:onClick="openSettings"
        android:text="@string/settingsButton"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/aboutButton"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="484dp"
        android:layout_marginEnd="116dp"
        android:background="#b3e1e1"
        android:fontFamily="@font/montserrat"
        android:onClick="openAbout"
        android:text="@string/aboutButton"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="209dp"
        android:layout_height="163dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie_start"
        tools:srcCompat="@drawable/movie_start" />

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/newUserGreeting"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="259dp"
        android:layout_height="31dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/userPointsLabel"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>