<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activity.PlayActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/valueWrapper"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="#4c5b61"
        android:textColorHint="#4c5b61"
        app:counterTextAppearance="@style/TextInputAppearance"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextInputAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/valueText"
            android:layout_width="140dp"
            android:layout_height="56dp"
            android:backgroundTint="#4c5b61"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textColor="#4c5b61"
            android:textColorHighlight="#4c5b61"
            android:textColorHint="#4c5b61"
            android:textColorLink="#4c5b61" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tryButton"
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp"
        android:background="#f8bd7f"
        android:fontFamily="@font/montserrat"
        android:imeOptions="actionDone"
        android:onClick="onGuessButtonPress"
        android:text="@string/guessButton"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/pastResultsListView"
        android:layout_width="368dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="32dp"
        android:stackFromBottom="false"
        android:theme="@style/ListStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/pointsLabel"
        android:textColor="#4c5b61"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userPointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:textColor="#4c5b61"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/lastResultsTextView"
        android:textColor="#4c5b61"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>